# weather

./: .env.example  .gitignore  Caddyfile  Cargo.toml  Makefile  flake.nix  module.nix  shell.nix
src/: config.rs  db.rs  electricity.rs  main.rs  notify.rs  scheduler.rs  styles.css  theme.css  weather.rs
src/routes/: index.rs  mod.rs  push.rs
static/: manifest.json  script.js  styles.css  sw.js
