[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather"
path = "src/main.rs"

[[bin]]
name = "generate-vapid-keys"
path = "src/bin/generate_vapid_keys.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset", "http2"] }
quick-xml = "0.37"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = { version = "0.22", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["fs"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hypertext = { version = "0.12.1", features = ["axum"] }
http = "1.4.0"
